# lbanet

./: .gitignore  CMakeLists.txt  Readme.txt  UpdateData.sh
Client/: ActorUserData.cpp  ActorUserData.h  AnimatedObjectHandlerBase.cpp  AnimatedObjectHandlerBase.h  CEGUIDrawable.cpp  CEGUIDrawable.h  CMakeLists.txt  CameraController.cpp  CameraController.h  CharacterControllerLBA.cpp  CharacterControllerLBA.h  CharacterModes.cpp  CharacterModes.h  CharacterStates.cpp  CharacterStates.h  ChatBox.cpp  ChatBox.h  ChatReceiverServant.cpp  ChatReceiverServant.h  ChatServerHandler.cpp  ChatServerHandler.h  ChooseNumberBox.cpp  ChooseNumberBox.h  ChooseWorldGUI.cpp  ChooseWorldGUI.h  Client.sln  Client.vcproj  ClientExtendedEvents.h  ClientExtendedTypes.h  ClientLuaHandler.cpp  ClientLuaHandler.h  CommunityBox.cpp  CommunityBox.h  ConfigurationManager.cpp  ConfigurationManager.h  ConnectionHandlerBase.h  ContainerBox.cpp  ContainerBox.h  DataLoader.cpp  DataLoader.h  (+141 more)
Client/Resources/icons/: readme.txt
Data/: Preferences.cfg  screen_resolutions.txt
Data/LuaCommon/: ClientHelperFunctions.lua
DistributedShared/: CMakeLists.txt  StartLBANet.sh  libNxCooking.so.1  libPhysXCore.so.1  libPhysXLoader.so.1
Editor/: Editor.sln  Editor.vcproj  addaction.ui  addactordialog.ui  addclientscript.ui  additemdialog.ui  addmapdialog.ui  addspawning.ui  addstartitemdialog.ui  addteleportdialog.ui  addtextdialog.ui  addtriggerdialog.ui  addworlddialog.ui  editor.qrc  editor.ui  editorhandler.cpp  editorhandler.h  edittemplatesdialog.ui  main.cpp  openworlddialog.ui  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
Servers/ChatRoomManagerServer/: ChatRoomManagerServer.sln  ChatRoomManagerServer.vcproj  ChatRoomManagerServer.vcxproj  Makefile  RoomManagerServant.cpp
Servers/ConnectedTracker/: ConnectedTrackerServant.cpp  ConnectedTrackerServant.h  ConnectedTrackerServer.sln  ConnectedTrackerServer.vcproj  ConnectedTrackerServer.vcxproj  DatabaseHandler.cpp  DatabaseHandler.h  Makefile  PermissionsVerifierServant.cpp  PermissionsVerifierServant.h  SharedData.cpp  SharedData.h  main.cpp
Servers/IceGridServer/: IceGridGUI.bat  Icegrid_CleanUp.bat  Icegrid_Start.bat  Register.sh  Start.sh  StartPatchServer.sh  StartWorlds.sh  application.xml  config.grid  register_application.bat
Servers/LBA_RoomManagerServer/: LBA_RoomManagerServer.sln  LBA_RoomManagerServer.vcproj  RoomManagerServant.h  main.cpp
Servers/LoginServer/: AvailableWorldsHandler.cpp  AvailableWorldsHandler.h  ChatParticipantServant.cpp  ChatParticipantServant.h  ClientSessionManagerServant.cpp  ClientSessionManagerServant.h  LoginServer.sln  LoginServer.vcproj  LoginServer.vcxproj  Makefile  SessionServant.cpp  SessionServant.h  WorldRegistrationServant.cpp  WorldRegistrationServant.h  main.cpp
Servers/PollingChatServer/: ChatPollingSession.cpp  ChatPollingSession.h  ChatReceiverServant.cpp  ChatReceiverServant.h  ChatSessionManagerServant.cpp  ChatSessionManagerServant.h  Makefile  PollingChatServer.sln  PollingChatServer.vcproj  main.cpp
Servers/WorldServer/: Actions.cpp  Actions.h  ActorHandler.cpp  ActorHandler.h  ActorScriptPart.cpp  ActorScriptPart.h  ClientProxyHandler.h  CommunityBoxHandler.cpp  CommunityBoxHandler.h  Conditions.cpp  Conditions.h  ContainerBoxHandler.cpp  ContainerBoxHandler.h  DatabaseHandler.cpp  DatabaseHandler.h  DatabaseHandlerBase.h  DelayedExecutionHandler.h  DialogBoxHandler.cpp  DialogBoxHandler.h  DialogPart.cpp  DialogPart.h  DoorHandler.cpp  DoorHandler.h  InventoryBoxHandler.cpp  InventoryBoxHandler.h  InventoryItemHandler.cpp  InventoryItemHandler.h  LocalDatabaseHandler.cpp  LocalDatabaseHandler.h  LuaHandlerBase.cpp  LuaThreadHandler.cpp  LuaThreadHandler.h  MailBoxHandler.cpp  MailBoxHandler.h  MaintenanceInterfaceServant.cpp  MaintenanceInterfaceServant.h  Makefile  MapHandler.cpp  MapHandler.h  NavMeshAgent.cpp  (+51 more)
Tools/: sfalbum.txt  tocompare.txt
Tools/ExtractLba1SceneInfo/: .gitignore  ExtractLba1SceneInfo.sln  ExtractLba1SceneInfo.vcxproj  ExtractLba1SceneInfo.vcxproj.filters  extract.cpp
Tools/GridsExporter/: GridExporter.sln  GridExporter.vcproj  PhysicHandler.cpp  PhysicHandler.h  globals.h  lba_map_gl.cpp  lba_map_gl.h  lba_mapphys.cpp  lba_mapphys.h  lbnet_floor_sound.txt  main.cpp  string_append.cpp  string_append.h  vector.h  virtual_file.cpp  virtual_file.h
Tools/LBAHolomapLocations/: HQRlib.cpp  HQRlib.h  HoloHelp.cpp  HoloHelp.h  HolomapLib.cpp  HolomapLib.h  LBAHolomapLocations.bpr  LBAHolomapLocations.cpp  LBAHolomapLocations.sln  LBAHolomapLocations.vcproj  LBAHolomapLocations_main.cpp  LBAHolomapLocations_main.h  about.cpp  about.h  (+1 more)
cmake_modules/: FindCEGUI.cmake  FindFMOD.cmake  FindFREETYPE.cmake  FindICE.cmake  FindLUA.cmake  FindLUABIND.cmake  FindOSG.cmake  FindPHYSX.cmake  FindSQLITE.cmake  FindVLC.cmake
infrastructure/: CMakeLists.txt  setup.bat  setup.sh
infrastructure/cpp/: Makefile
infrastructure/slice/: ChatInfo.ice  ChatInfo.php  ClientInterface.ice  ClientInterface.php  ClientServerEvents.ice  ClientServerEvents.php  ClientSession.ice  ConnectedTracker.ice  ConnectedTracker.php  LbaTypes.ice  LbaTypes.php  MaintenanceInterface.ice  PollingChat.ice  PollingChat.php  RoomManager.ice  WorldRegistration.ice  WorldServerInterface.ice
infrastructure/sql/: mysql_dump.sql  mysql_squeleton.sql  sqlite_squeleton.sql
shared/: ActionArguments.h  ActionOnAnimationHandlerBase.h  ActorScriptPart.cpp  ActorScriptPart.h  CMakeLists.txt  CatmulSplineHandler.cpp  CatmulSplineHandler.h  CharacterModes.cpp  CharacterModes.h  CharacterStates.cpp  CharacterStates.h  ClientScript.cpp  ClientScript.h  CommonTypes.cpp  CommonTypes.h  DataDirHandler.cpp  DataDirHandler.h  DisplayHandlerBase.h  DisplayObjectHandlerBase.h  DynamicObject.cpp  DynamicObject.h  EditorSharedData.h  Entities.cpp  Entities.h  EventsQueue.cpp  EventsQueue.h  FileUtil.cpp  FileUtil.h  GameGUIBase.h  HQRHandler.cpp  HQRHandler.h  HQRlib.cpp  HQRlib.h  Lba1ModelMapHandler.cpp  Lba1ModelMapHandler.h  Lba1ModelPath.h  Lba1ModelStructs.h  LogHandler.cpp  LogHandler.h  LuaHandlerBase.cpp  (+36 more)
(+1687 files in other folders)
